# story-lord

./: .gitignore  README.md  pyproject.toml  sample_architect_run.py  sample_narrator_run.py
examples/: sample_input.yaml
src/: config.py  first.py  models.py  story_lord.py
src/agents/: __init__.py  architect.py  discovery.py  narrator.py  protocols.py
src/agents/architect/: __init__.py
src/agents/builtins/: __init__.py  architect_default.py  editor_default.py  editor_simile_smasher.py  narrator_default.py
src/agents/character/: __init__.py  base.py  character_default.py  character_mbti.py  protocols.py  registry.py
src/agents/editor/: __init__.py  editor_simile_smasher.py
src/agents/narrative/: __init__.py  narrator_default.py
src/graph/: __init__.py  delta.py  nodes.py  state.py  workflow.py
src/tools/: __init__.py  discovery.py  protocols.py  registry.py
src/tools/builtins/: __init__.py
src/tui/: __init__.py  app.py
tests/: test_import_order.py
