[project]
name = "story-lord"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mark Norman", email = "mark@marknorman.com"},
]
dependencies = ["langchain>=1.2.2", "pydantic-settings>=2.12.0", "langchain-anthropic>=1.3.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
