[project]
name = "storylord"
version = "0.1.0"
description = "AI-powered story generation with pluggable agents"
authors = [
    {name = "Mark Norman", email = "mark@marknorman.com"},
]
dependencies = ["langchain>=1.2.2", "pydantic-settings>=2.12.0", "langchain-anthropic>=1.3.1", "pyyaml>=6.0", "structlog>=25.5.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.entry-points."storylord.architects"]
default = "agents.builtins.architect_default:DefaultArchitect"

[project.entry-points."storylord.narrators"]
default = "agents.builtins.narrator_default:DefaultNarrator"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "python src/story_lord.py"
test = "pytest tests/ -v"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
